# minecraft-manager

./: .gitignore  README.md  pyproject.toml
src/: host_service.py  platform.py  profiles.py  utils.py
src/cli/: config.py  main.py  profile.py  server.py
src/config/: config.py  profile.py
tests/: test_host_service.py  test_profiles.py
